syntax = "proto3";


message BusinessCountFeature {
    message ActionCountFeature {
        int32 imp = 1;
        int32 click = 2;
        int32 install = 3;
        int32 attr_install = 4;
    };
    ActionCountFeature count_features_7d = 1;
    ActionCountFeature count_features_14d = 2;
    ActionCountFeature count_features_30d = 3;
    ActionCountFeature count_features_1d = 4;
    ActionCountFeature count_features_3d = 5;
};

